src/widget/snapshots/nifi_lens__widget__watch_strip__tests__watch_strip_collapsed_below_min_width.snap
---
source: src/widget/watch_strip.rs
assertion_line: 235
expression: "format!(\"{}\", term.backend())"
---
"watch: filename =~ /^invoic · ● tailing                     "
