src/widget/snapshots/nifi_lens__widget__watch_strip__tests__watch_strip_paused_unfocused.snap
---
source: src/widget/watch_strip.rs
assertion_line: 210
expression: "snapshot_render(&state, 4)"
---
"┌ Watch ───────────────────────────────────────────────────────────────────────────────── ⏸ paused ┐"
"│  predicate filename =~ /^invoice-/                                                               │"
"│12.5 ev/s · 0/2000 buf · last 250 ms                                                              │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
