src/widget/snapshots/nifi_lens__widget__watch_strip__tests__watch_strip_with_trimmed_and_detail_errors.snap
---
source: src/widget/watch_strip.rs
assertion_line: 245
expression: "snapshot_render(&state, 4)"
---
"┌ Watch ──────────────────────────────────────────────────────────────────────────────── ● tailing ┐"
"│  predicate filename =~ /^invoice-/                                                               │"
"│12.5 ev/s · 0/2000 buf · last 250 ms · trimmed 42 · detail-errors 3                               │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
